corrected remapping for dotted wart in HMDD for u16F09, 0B, 0F, 19, and 24. (issue 15)

--- a/fonts/shishan/source/HMDDmap.cfg
+++ b/fonts/shishan/source/HMDDmap.cfg
@@ -1,18 +1,19 @@
 n, u16F01.dot, 16F01
 n, u16F05.dot, 16F05
 n, u16F09.dot, 16F09
-n, u16F0F.dot, 16F09
+n, u16F0B.dot, 16F0B
+n, u16F0F.dot, 16F0F
 n, u16F11.dot, 16F11
 n, u16F15.dot, 16F15
 n, u16F17.dot, 16F17
 n, u16F18.hmd, 16F18
-n, u16F19.hmddot, 16F19
+n, u16F19.hmd.dot, 16F19
 n, u16F1B.dot, 16F1B
 n, u16F1D.dot, 16F1D
 n, u16F1F.dot, 16F1F
 n, u16F22.dot, 16F22
 n, u16F23.hmd, 16F23
-n, u16F24.hmddot, 16F24
+n, u16F24.hmd.dot, 16F24
 n, u16F29.dot, 16F29
 n, u16F2B.dot, 16F2B
 n, u16F2E.dot, 16F2E
